--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "playlists",
   "version": "0.1.0",
-  "private": true,
+  "author": "Szymon Łukasik",
+  "description": "Playlist manager - recruitment task",
+  "private": false,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -10,11 +13,21 @@
     "@types/node": "^12.20.7",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "@types/react-query": "^1.1.2",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.9",
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@typescript-eslint/parser": "^4.20.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "typescript": "^4.2.3",
-    "web-vitals": "^1.1.1"
+    "styled-normalize": "^8.0.7",
+    "stylelint": "^13.12.0",
+    "stylelint-config-recommended": "^4.0.0",
+    "stylelint-processor-styled-components": "^1.10.0",
+    "typescript": "^4.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,5 +52,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "axios": "^0.21.1",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "prettier": "^2.2.1",
+    "react-hook-form": "^6.15.5",
+    "react-query": "^3.13.3",
+    "styled-components": "^5.2.3",
+    "stylelint-config-styled-components": "^0.1.1"
   }
 }
