--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "private": false,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.22",
+    "@types/material-ui": "^0.21.8",
     "@types/node": "^12.20.7",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
@@ -21,19 +24,23 @@
     "eslint-plugin-prettier": "^3.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-normalize": "^8.0.7",
     "stylelint": "^13.12.0",
     "stylelint-config-recommended": "^4.0.0",
     "stylelint-processor-styled-components": "^1.10.0",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "prettier --write src/**/*.ts{,x}",
+    "lint": "tsc --noEmit && eslint src/**/*.ts{,x}"
   },
   "eslintConfig": {
     "extends": [
@@ -54,6 +61,7 @@
     ]
   },
   "devDependencies": {
+    "@hookform/resolvers": "^0.1.1",
     "axios": "^0.21.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "prettier": "^2.2.1",
