--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "playlists",
+  "name": "playlist-manager",
   "version": "0.1.0",
   "author": "Szymon Łukasik",
   "description": "Playlist manager - recruitment task",
@@ -15,14 +15,17 @@
     "@types/material-ui": "^0.21.8",
     "@types/node": "^12.20.7",
     "@types/react": "^17.0.3",
+    "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-dom": "^17.0.3",
     "@types/react-query": "^1.1.2",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
+    "@types/yup": "^0.29.11",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
     "eslint-plugin-prettier": "^3.3.1",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^5.2.0",
